labs/compreview-apps/beeper-api/beeper-db.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Secret
  metadata:
    annotations:
      template.openshift.io/expose-database_name: '{.data[''db-name'']}'
      template.openshift.io/expose-password: '{.data[''db-password'']}'
      template.openshift.io/expose-username: '{.data[''db-user'']}'
    labels:
      template: postgresql-persistent-template
    name: beeper-db
  stringData:
    db-name: beeper
    db-password: beeper123
    db-user: beeper-api
    db-host: beeper-db
    db-port: "5432"
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      template.openshift.io/expose-uri: postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}
    labels:
      template: postgresql-persistent-template
    name: beeper-db
  spec:
    ports:
    - name: postgresql
      nodePort: 0
      port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      app: beeper-db
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      template: postgresql-persistent-template
    name: beeper-db
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      template: postgresql-persistent-template
    name: beeper-db
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: postgresql
        app: beeper-db
    template:
      metadata:
        labels:
          name: postgresql
          app: beeper-db
      spec:
        containers:
        - capabilities: {}
          image: registry.ocp4.example.com:8443/rhel8/postgresql-13:1-7
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
              - /usr/libexec/check-container
              - --live
            initialDelaySeconds: 120
            timeoutSeconds: 10
          name: postgresql
          ports:
          - containerPort: 5432
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /usr/libexec/check-container
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 1536Mi
            requests:
              cpu: 250m
              memory: 1Gi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /var/lib/pgsql/data
            name: postgresql-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: beeper-db
  status: {}
kind: List
metadata: {}
