labs/compreview-apps/beeper-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beeper-api
  namespace: workshop-support
spec:
  selector:
    app: CHANGE_ME
  ports:
    - port: CHANGE_ME
      targetPort: CHANGE_ME
      name: https
