labs/compreview-apps/beeper-api/beeper-api-ingresspolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: beeper-api
  namespace: workshop-support
spec:
  podSelector: CHANGE_ME
  ingress:
    - from:
        CHANGE_ME
      ports:
        CHANGE_ME
