labs/compreview-apps/beeper-api/db-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-policy
  namespace: workshop-support
spec:
  podSelector:
    matchLabels:
      CHANGE_ME
  ingress:
    - from:
       CHANGE_ME
      ports:
        CHANGE_ME
